ui/client-react/src/components/formBuilder/formBuilder.scss
@import '../../assets/css/qbVariables';

.formBuilderContainer {
    // When using the touch-backend, the user-select: none property turns off text selection while dragging.
    // Our auto-prefixer doesn't appear to support this one so added prefixes for user-select manually.
    -moz-user-select: -moz-none;
    -ms-user-select: none;
    -webkit-user-select: none;
    user-select: none;

    // For the purpose of current form builder, we lock the height of the textarea so that the height can
    // be used in determining the height of the field editing tools
    // !important is needed because this value is set as an inline style in the multilineTextFieldValueEditor
    textarea {
        height: 150px !important;
    }

    .dragAndDropField {
        max-width: $form-edit-input-width;

        @include small-breakpoint {
            max-width: inherit;
        }
    }

    .droppableField {
        @include small-breakpoint {
            //This is set for mobile, this way the select box and bottom border
            //will stretch across the whole screen
            margin-right: -15px;
            margin-left: -25px;
        }
    }

    .draggableField {
        opacity: 1;
        z-index: 1;
        transition: opacity 0.5s;

        /* When in builder mode we need to push out the
        left padding to make room for the editing tools */
        margin-left: $spacing-tiny;

        &:focus {
            /*Focus is for keyboard nav*/
            width: 295px;
            outline-color: hotpink;
            .fieldEditingTools {
                opacity: 1;
                .qbIcon {
                    outline-color: blueviolet;
                    opacity: 1;
                }
            }
        }

        .draggableFieldWrapper {
            width: 310px;
            height: 100px;

            @include small-breakpoint {
                width: 100%;
            }

            &:hover {
                background: $color-black-250;

                .fieldEditingTools {
                    opacity: 1;
                    .qbIcon {
                        opacity: 1;
                    }
                }

                @include small-breakpoint {
                    background: none;
                }
            }

            &:active {
                @include dragpreview-active-gradient;
                .fieldEditingTools {
                    opacity: 0;
                }
            }

            .formElement .fieldLabel {
                padding-top: 12px;
                padding-left: 15px;
            }

            .cellWrapper {
                padding-left: 15px;
            }
        }
    }

    .draggableField, .droppableField {
        position: relative;
    }

    .dragging {
        opacity: 0.9;
        transition: opacity 0.5s;
    }

    /**
     *  The element cache is always hidden. It contains copies of elements that are being dragged to support
     *  an issue with touch events. See formBuilder.js for more information.
     */
    .elementCache {
        display: none;
    }

    .selectedFormElement {
        opacity: 1;
        outline: none;
        border: $stroke-width-thin solid $border-focused-color;

        .deleteFieldIcon {
            .qbIcon {
                opacity: 1;
                color: $color-red-700;
            }
        }

        .fieldPreferencesIcon {
            .qbIcon {
                opacity: 1;
                color: $color-cyan-700;
            }
        }
    }
}

